--- a/.env.example
+++ b/.env.example
@@ -1,21 +1,21 @@
 # Client side
 
 # The app logo, fill with a url or base64 data.
-APP_LOGO=""
+APP_LOGO="https://s2.loli.net/2023/04/08/gSAPr9EfeZs3GCw.png"
 # The name of the app.
-APP_NAME=""
+APP_NAME="AiPub"
 # Summary your app's behavoir and show the users how to user it.
-APP_SUMMARY=""
+APP_SUMMARY="Correcting and polishing your text"
 # Example input that shows user how to use the app.
-EXAMPLE_INPUT=""
+EXAMPLE_INPUT="Hello there, im ZZ, it's glad to see you."
 
 # Server side
 
 # Required, the API key got from OpenAI (https://platform.openai.com/account/api-keys)
-OPENAI_API_KEY=""
+OPENAI_API_KEY="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"
 # Optional, the agent server of OpenAI API. Use this when the offical OpenAI API server is unreachable.
 OPENAI_API_BASE_URL=""
 # Optional, the system message helps set the behavior of the assistant. (Learn more from https://platform.openai.com/docs/guides/chat/introduction)
-SYSTEM_MESSAGE=""
+SYSTEM_MESSAGE="You are a language polisher, corrects and polishes the given content."
 # Optional, the message template to wrap the user inputs, the `{{input}}` string in the template will be replaced by user inputs.
-MESSAGE_TEMPLATE=""
+MESSAGE_TEMPLATE="Correct and polish the following content: "
